--- a/QuanLyThongTinDaoTao/Views/Shared/_MainLayout.cshtml
+++ b/QuanLyThongTinDaoTao/Views/Shared/_MainLayout.cshtml
@@ -76,7 +76,7 @@
                     <div class="dropdown-menu fade-down m-0">
                         <a href="@Url.Action("Index", "TraCuuLichHoc")" class="dropdown-item">Tra Cứu Lịch Học</a>
                         <a href="@Url.Action("Index", "TraCuuChungChi")" class="dropdown-item">Tra Cứu Chứng Chỉ</a>
-                        <a href="@Url.Action("Index", "LopHocChieuSinh")" class="dropdown-item">Xem Lớp học đang chiêu sinh</a>
+                        <a href="@Url.Action("Index", "TraCuu")" class="dropdown-item">Xem Lớp học đang chiêu sinh</a>
                     </div>
                 </div>
             </div>
@@ -96,18 +96,16 @@
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-bg-dark mb-3">Quick Link</h4>
-                    <a class="btn btn-link" href="">About Us</a>
-                    <a class="btn btn-link" href="">Contact Us</a>
-                    <a class="btn btn-link" href="">Privacy Policy</a>
-                    <a class="btn btn-link" href="">Terms & Condition</a>
-                    <a class="btn btn-link" href="">FAQs & Help</a>
+                    <a class="btn btn-link" href="">Về chúng tôi</a>
+                    <a class="btn btn-link" href="">Liên lạc</a>
+                  
                 </div>
                 <div class="col-lg-3 col-md-6">
-                    <h4 class="text-bg-dark mb-3">Contact</h4>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
-                    <div class="d-flex pt-2">
+                    <h4 class="text-bg-dark mb-3">Hỗ Trợ Công Việc</h4>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>199, Bà Huyện Thanh Quan, P. Võ Thị Sáu, Quận 3 ,TPHCM</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>0379179281</p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>nctien.1410@gmail.com</p>
+                    <div class="d-flex pt-2"> 
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"></i></a>
@@ -115,7 +113,7 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
-                    <h4 class="text-bg-dark mb-3">Gallery</h4>
+                    <h4 class="text-bg-dark mb-3">Khoảnh Khắc</h4>
                     <div class="row g-2 pt-2">
                         <div class="col-4">
                             <img class="img-fluid bg-light p-1" src="~/Asset/img/course-1.jpg" alt="">
@@ -138,11 +136,11 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
-                    <h4 class="text-bg-dark mb-3">Newsletter</h4>
-                    <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
+                    <h4 class="text-bg-dark mb-3">Thông Tin</h4>
+                    <p>Nếu có ý kiến gì vui lòng điền mail để trợ giúp</p>
                     <div class="position-relative mx-auto" style="max-width: 400px;">
-                        <input class="form-control border-0 w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
-                        <button type="button" class="btn btn-success py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
+                        <input class="form-control border-0 w-100 py-3 ps-4 pe-5" type="text" placeholder="Email của bạn">
+                        <button type="button" class="btn btn-success py-2 position-absolute top-0 end-0 mt-2 me-2">Gửi</button>
                     </div>
                 </div>
             </div>
@@ -151,17 +149,13 @@
             <div class="copyright">
                 <div class="row">
                     <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        &copy; <a class="border-bottom" href="#">Your Site Name</a>, All Right Reserved.
+                        &copy; <a class="border-bottom" href="#">Trung Tâm Đào tạo</a>
 
-                        <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                        Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a>
                     </div>
                     <div class="col-md-6 text-center text-md-end">
                         <div class="footer-menu">
-                            <a href="">Home</a>
-                            <a href="">Cookies</a>
-                            <a href="">Help</a>
-                            <a href="">FQAs</a>
+                            <a href="">Khóa Học</a>
+                           
                         </div>
                     </div>
                 </div>
