--- a/QuanLyThongTinDaoTao/Views/Shared/_MainLayout.cshtml
+++ b/QuanLyThongTinDaoTao/Views/Shared/_MainLayout.cshtml
@@ -61,7 +61,7 @@
     <!-- Spinner End -->
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg navbar-light shadow sticky-top p-0" style="background-color: #308437;">
-        <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
+        <a href="@Url.Action("Index", "Courses")" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
             <h2 class="m-0 text-white"><i class="fa fa-book me-3"></i>eLEARNING</h2>
         </a>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -95,7 +95,7 @@
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
-                    <h4 class="text-bg-dark mb-3">Quick Link</h4>
+                    <h4 class="text-bg-dark mb-3">Liên Hệ Nhanh</h4>
                     <a class="btn btn-link" href="">Về chúng tôi</a>
                     <a class="btn btn-link" href="">Liên lạc</a>
                   
